--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   height: 100vh;
-  /*height: 100%;*/
-  /*overflow: hidden;*/
 }
