--- a/src/components/PathfindingVisualizer.css
+++ b/src/components/PathfindingVisualizer.css
@@ -1,11 +1,11 @@
 h1 {
     opacity: 0;
     transform: translateY(-10px);
-    transition: all 0.8s ease-out;
+    transition: all var(--base-transition) ease-out;
     text-align: center;
     font-size: 2em;
     margin-bottom: 20px;
-    color: #333;
+    color: var(--neutral-color);
 }
 
 .loaded h1 {
@@ -26,35 +26,34 @@ h1 {
 .instructions span {
     flex: 1;
     text-align: center;
-    font-weight: 900;
+    font-weight: var(--font-weight-bold);
     font-size: 1.2em;
-    color: #f1f1f1;
+    color: var(--light-text-color);
     margin: 0 5px;
     border-radius: 3px;
     padding: 5px;
-    transition: background-color 0.3s;
+    transition: background-color var(--base-transition), transform var(--base-transition);
 }
 
 .instructions span:nth-child(1) {
-    background-color: #d55a5a;
+    background-color: var(--alert-color);
 }
 
 .instructions span:nth-child(2) {
-    background-color: #d5a55a;
+    background-color: var(--warning-color);
 }
 
 .instructions span:nth-child(3) {
-    background-color: #5ad57a;
+    background-color: var(--success-color);
 }
 
 .instructions span:nth-child(4) {
-    background-color: #5a96d5;
+    background-color: var(--info-color);
 }
 
 .instructions span:hover {
     background-color: #354a66;
     transform: scale(1.25) translateY(-5px);
-    transition: all 0.3s ease;
 }
 
 .controls {
@@ -65,13 +64,13 @@ h1 {
 
 .controls button {
     padding: 10px 20px;
-    background-color: #3498db;
+    background-color: var(--primary-color);
     border: none;
     border-radius: 5px;
-    color: #ffffff;
+    color: var(--light-text-color);
     font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.3s, transform 0.1s;
+    transition: background-color var(--base-transition), transform 0.1s;
     margin-right: 10px;
 }
 
@@ -80,7 +79,7 @@ h1 {
 }
 
 .controls button:hover {
-    background-color: #2980b9;
+    background-color: var(--secondary-color);
 }
 
 .controls button:active {
@@ -105,7 +104,7 @@ h1 {
     align-items: center;
     gap: 10px;
     font-size: 18px;
-    color: #333;
+    color: var(--neutral-color);
 }
 
 .legend-color {
@@ -115,27 +114,27 @@ h1 {
 }
 
 .node-start {
-    background-color: green;
+    background-color: var(--start-node-color);
 }
 
 .node-finish {
-    background-color: red;
+    background-color: var(--finish-node-color);
 }
 
 .node-wall {
-    background-color: black;
+    background-color: var(--wall-node-color);
 }
 
 .node-shortest-path {
-    background-color: aqua;
+    background-color: var(--shortest-path-node-color);
 }
 
 .node-visited {
-    background-color: lightyellow;
+    background-color: var(--visited-node-color);
 }
 
 .node-unvisited {
-    background-color: #ffffff;
+    background-color: var(--unvisited-node-color);
 }
 
 .grid {
