--- a/src/pages/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/pages/PathfindingVisualizer/PathfindingVisualizer.css
@@ -17,3 +17,33 @@ h1 {
     display: flex;
     justify-content: center;
 }
+
+@keyframes pulsate {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+}
+
+.actions-container .button-info {
+    animation: pulsate 1.5s infinite;
+}
+
+@keyframes glow {
+    0% { box-shadow: 0 0 5px #fff; }
+    50% { box-shadow: 0 0 20px #fff, 0 0 30px var(--info-secondary-color); }
+    100% { box-shadow: 0 0 5px #fff; }
+}
+
+.actions-container .button-info:hover,
+.actions-container .button-info:focus {
+    animation: glow 1.5s infinite;
+}
+
+.actions-container .button-info.clicked-once {
+    animation: none;
+}
+
+.actions-container .button-info.clicked-once:hover,
+.actions-container .button-info.clicked-once:focus {
+    animation: none;
+}
